Fixed player heads not loading

--- a/about-us.html
+++ b/about-us.html
@@ -125,7 +125,7 @@
 
                 <div class="row row1">
                     <div class="col-sm-6 bio_box">
-                        <img src="http://signaturecraft.us/avatars/5/face/Radeon3.png" alt="Radeon3">
+                        <img src="https://crafatar.com/avatars/a0d2904f-24c1-42b0-b192-e67d696e1f46" alt="Radeon3">
                         <div class="info">
                             <p class="name">Brandon (Radeon3)</p>
                             <p class="area">Server Operations</p>
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="col-sm-6 bio_box bio_boxr">
-                        <img src="http://signaturecraft.us/avatars/5/face/jrneulight.png" alt="jrneulight">
+                        <img src="https://crafatar.com/avatars/fb04a5d8-14d2-415a-b00a-5d7e9cedd6a5" alt="jrneulight">
                         <div class="info">
                             <p class="name">Jacob (jrneulight)</p>
                             <p class="area">Lead Developer</p>
@@ -147,7 +147,7 @@
 
                 <div class="row row1">
                     <div class="col-sm-6 bio_box">
-                        <img src="http://signaturecraft.us/avatars/5/face/Caefer.png" alt="Caefer">
+                        <img src="https://crafatar.com/avatars/6a7ca706-870d-4bed-b33d-65d12ac9ebb1" alt="Caefer">
                         <div class="info">
                             <p class="name">Caefer</p>
                             <p class="area">Honorary Administrator</p>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 bio_box bio_boxr">
-                        <img src="http://signaturecraft.us/avatars/5/face/DarkMeteora.png" alt="DarkMeteora">
+                        <img src="https://crafatar.com/avatars/f4af6860-2de4-408e-b55a-947e5c25b099" alt="DarkMeteora">
                         <div class="info">
                             <p class="name">DarkMeteora</p>
                             <p class="area">Administrator</p>
@@ -168,7 +168,7 @@
 
                 <div class="row row1">
                     <div class="col-sm-6 bio_box">
-                        <img src="http://signaturecraft.us/avatars/5/face/94Keegan.png" alt="94Keegan">
+                        <img src="https://crafatar.com/avatars/c8055bde-20cb-4404-a23f-1fc54ba917b3" alt="94Keegan">
                         <div class="info">
                             <p class="name">Keegan (94Keegan)</p>
                             <p class="area">Honorary Administrator/Developer</p>
@@ -177,7 +177,7 @@
                     </div>
 
                     <div class="col-sm-6 bio_box bio_boxr">
-                        <img src="http://signaturecraft.us/avatars/5/face/Agilityy_FX.png" alt="Agilityy_FX">
+                        <img src="https://crafatar.com/avatars/205e43c7-0cdf-45ed-871d-729de78e7301" alt="Agilityy_FX">
                         <div class="info">
                             <p class="name">Agilityy_FX (Agilityy)</p>
                             <p class="area">Super Moderator</p>
@@ -188,7 +188,7 @@
 
                 <div class="row row1">
                     <div class="col-sm-6 bio_box bio_boxr">
-                        <img src="http://signaturecraft.us/avatars/5/face/Monster000Slayer.png" alt="Monster000Slayer">
+                        <img src="https://crafatar.com/avatars/d1ee1f6b-6a97-44b4-8190-7e6e1e70471f" alt="Monster000Slayer">
                         <div class="info">
                             <p class="name">Monster000Slayer</p>
                             <p class="area">Moderator</p>
@@ -197,7 +197,7 @@
                     </div>
 
                     <div class="col-sm-6 bio_box bio_boxr">
-                        <img src="http://signaturecraft.us/avatars/5/face/Warkatt.png" alt="Warkatt">
+                        <img src="https://crafatar.com/avatars/ff976624-0b87-43e1-95f8-15e992174a4b" alt="Warkatt">
                         <div class="info">
                             <p class="name">WarKatt</p>
                             <p class="area">Moderator</p>
